style: Fix header style issue on mobile device

--- a/src/assets/style/_elements.scss
+++ b/src/assets/style/_elements.scss
@@ -472,6 +472,13 @@ $gc-small: $form-width - $gc-large - 4;
   top: 64px;
   z-index: 1;
 }
+
+@media (max-width: 599px) {
+  .mat-tab-header {
+    top: 56px;
+  }
+}
+
 .mat-tab-body-wrapper {
   z-index: 0;
 }
